mise en page bootsrapienne

--- a/wp-content/themes/le-photographe/sass/variables.css
+++ b/wp-content/themes/le-photographe/sass/variables.css
@@ -1,1 +1,5 @@
-/* No CSS *//*# sourceMappingURL=variables.css.map */
+/*
+font-family: 'Lato', sans-serif;
+font-family: 'Playfair Display', serif;
+*/
+/*# sourceMappingURL=variables.css.map */
