--- a/wp-content/themes/le-photographe/sass/variables.scss
+++ b/wp-content/themes/le-photographe/sass/variables.scss
@@ -1,5 +1,9 @@
 // les Variabes
 // *******************Fonts*****************
+/*
+font-family: 'Lato', sans-serif;
+font-family: 'Playfair Display', serif;
+*/
 //family
 $title-font : 'Playfair Display', serif;
 $txt-font : 'Lato', sans-serif;
@@ -12,3 +16,4 @@ $heavy : 900;
 //size
 
 //******************Colors***************
+$color-light: #f8f9fa;
