--- a/wp-content/themes/le-photographe/style.css
+++ b/wp-content/themes/le-photographe/style.css
@@ -18,62 +18,65 @@ body {
 
 h1, h2, h3 {
   font-family: "Playfair Display", serif;
-  color: red;
+  color: black;
+}
+
+a {
+  color: black;
+}
+a:hover {
+  color: black;
 }
 
 /* -------------NavBar--------------*/
 .logo {
   width: 50px;
   height: auto;
+  padding-left: 1rem;
+  padding-top: 1rem;
 }
 
 .barnav {
   position: fixed;
-  z-index: 1000;
-  width: 100%;
+  z-index: 100;
+  width: 101%;
   left: 0;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: black;
   padding: 0.3rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  justify-content: space-between;
+  align-content: center;
 }
-
 .barnav div {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  justify-content: space-between;
+  align-content: center;
 }
-
 .barnav div ul {
   width: 100%;
   list-style: none;
   margin-bottom: 0;
+  color: white;
 }
-
 .barnav div ul li {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   padding-left: 2rem;
+  font-size: 1.5rem;
+  font-weight: 700;
 }
-
-.nom-site {
-  font-size: 2rem;
-  margin-bottom: 0;
+.barnav div ul li a {
+  color: white;
+}
+.barnav div p > a {
+  padding-left: 1rem;
+  padding-top: 1rem;
+  font-size: 2.5rem;
+  color: white;
   font-family: "Playfair Display", serif;
-  color: black;
 }
 
+/* ---------------------------FRONT-PAGE----------------------- */
 .hero-img {
   width: 100%;
   height: auto;
@@ -85,6 +88,64 @@ h1, h2, h3 {
 
 .titre-hero {
   position: absolute;
-  top: 20%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(10, 10, 10, 0.5);
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-content: center;
 }
+
+.titre-hero-flex {
+  width: 50%;
+  padding-top: 4rem;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  position: relative;
+}
+.titre-hero-flex h1 {
+  font-size: 5rem;
+  color: white;
+}
+.titre-hero-flex p {
+  font-size: 3rem;
+  color: white;
+  font-weight: 300;
+}
+
+.ligne {
+  width: 100px;
+  height: 4px;
+  background-color: red;
+  align-self: center;
+}
+
+.titre-h2-front-page {
+  font-size: 3rem;
+  text-align: center;
+  margin: 2rem;
+}
+
+.ph-margin-top {
+  margin-top: 2rem;
+}
+
+.ph-margin-bottom {
+  margin-bottom: 2rem;
+}
+
+.avatar {
+  box-sizing: border-box;
+}
+
+.a-block {
+  display: block;
+}
+
 /*# sourceMappingURL=style.css.map */
