--- a/wp-content/themes/le-photographe/style.css
+++ b/wp-content/themes/le-photographe/style.css
@@ -147,5 +147,17 @@ a:hover {
 .a-block {
   display: block;
 }
+.a-block div {
+  display: flex;
+  justify-self: center;
+  align-self: center;
+  height: 4rem;
+}
+.a-block div .center {
+  display: block;
+  text-align: center;
+  align-self: center;
+  font-size: 1.8rem;
+}
 
 /*# sourceMappingURL=style.css.map */
