--- a/wp-content/themes/le-photographe/style.css
+++ b/wp-content/themes/le-photographe/style.css
@@ -93,6 +93,7 @@ a:hover {
   width: 100%;
   height: 100%;
   background-color: rgba(10, 10, 10, 0.5);
+  box-sizing: border-box;
   text-align: center;
   display: flex;
   flex-direction: row;
@@ -158,6 +159,13 @@ a:hover {
   text-align: center;
   align-self: center;
   font-size: 1.8rem;
+}
+
+.banniere h1 {
+  text-align: center;
+  font-size: 4rem;
+  font-weight: 700;
+  margin: 2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
